<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_expence"
            android:icon="@drawable/ic_local_atm_black_24dp"
            android:title="@string/title_section1" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/title_section2" />
        <item
            android:id="@+id/nav_totals"
            android:icon="@drawable/ic_poll_black_24dp"
            android:title="@string/title_section3" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/title_section4" />
    </group>

</menu>
