<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.myfinance.ExpenseFragment"
    android:weightSum="1">

    <TextView
        android:id="@+id/lblCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCategory"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Spinner
        android:id="@+id/cmbCategory"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:prompt="@string/cmbCategory" />

    <TextView
        android:id="@+id/lblExpenseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblExpenseName"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/txtExpenseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:ems="10"/>

    <TextView
        android:id="@+id/lblExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblExpense"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/txtExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnAddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:drawableLeft="@mipmap/quarantine"
        android:text="@string/btnAddExpense" />

</LinearLayout>

